Se agregaron ejemplos

--- a/views/ejemplos.ejs
+++ b/views/ejemplos.ejs
@@ -22,24 +22,24 @@
 
 </header>
 
-<div class="gallery-container">
-    <div class="gallery-card">
-        <a href="img/img-1.jpg" data-lightbox="roadtrip"><img src="img/img-1.jpg" alt="Imagen"></a>
+<div class="gallery-container" >
+    <div class="gallery-card" style="border: rgb(55, 38, 83) 5px solid;">
+        <a href="img/ejemplo1.png" data-lightbox="roadtrip"><img style="width: 675px;" src="img/ejemplo1.png" alt="Imagen"></a>
     </div>
-    <div class="gallery-card">
-        <a href="img/img-2.jpg" data-lightbox="roadtrip"><img src="img/img-2.jpg" alt="Imagen"></a>
+    <div class="gallery-card" style="border: rgb(55, 38, 83) 5px solid;">
+        <a href="img/ejemplo2.png" data-lightbox="roadtrip"><img style="width: 692px;" src="img/ejemplo2.png" alt="Imagen"></a>
     </div>
-    <div class="gallery-card">
-        <a href="img/img-3.jpg" data-lightbox="roadtrip"><img src="img/img-3.jpg" alt="Imagen"></a>
+    <div class="gallery-card" style="border: rgb(55, 38, 83) 5px solid;">
+        <a href="img/ejemplo3.png" data-lightbox="roadtrip"><img style="width: 700px;" src="img/ejemplo3.png" alt="Imagen"></a>
     </div>
-    <div class="gallery-card">
-        <a href="img/img-4.jpg" data-lightbox="roadtrip"><img src="img/img-4.jpg" alt="Imagen"></a>
+    <div class="gallery-card" style="border: rgb(55, 38, 83) 5px solid;">
+        <a href="img/ejemplo4.png" data-lightbox="roadtrip"><img style="width: 635px;" src="img/ejemplo4.png" alt="Imagen"></a>
     </div>
-    <div class="gallery-card">
-        <a href="img/img-5.jpg" data-lightbox="roadtrip"><img src="img/img-5.jpg" alt="Imagen"></a>
+    <div class="gallery-card" style="border: rgb(55, 38, 83) 5px solid;">
+        <a href="img/ejemplo3.png" data-lightbox="roadtrip"><img style="width: 700px;" src="img/ejemplo3.png" alt="Imagen"></a>
     </div>
-    <div class="gallery-card">
-        <a href="img/img-6.jpg" data-lightbox="roadtrip"><img src="img/img-6.jpg" alt="Imagen"></a>
+    <div class="gallery-card" style="border: rgb(55, 38, 83) 5px solid;">
+        <a href="img/ejemplo3.png" data-lightbox="roadtrip"><img style="width: 700px;" src="img/ejemplo3.png" alt="Imagen"></a>
     </div>
   
 </div>
