--- a/views/tema2.ejs
+++ b/views/tema2.ejs
@@ -155,7 +155,7 @@
         <div class="postcard__bar"></div>
         <div class="postcard__preview-txt text-light"> <strong > <h4>. Concepto</h4> </strong> <p>se denomina sentencias de entrada a aquellas que permiten enviar información desde el exterior al interior de un programa y sentencias de salida a aquellas que permiten enviar información desde el interior al exterior de un programa.</p> 
         <strong > <h4>. Descripción</h4> </strong>
-        </p>  En primer lugar se coloca el nombre que tendra nuesta varible, este debe expresar el contenido que contendra la variable (no deben utilizarse palabras reservadas para definir variables, ni inicializar las varibles con mayusculas o números), luego el operador de asignacion = y por ultimo el dato que contendra dicha varible (En ruby no es necesario definir el tipo de datos y su tipo puede cambiar a lo largo de la ejecución del programa).</p> </div>
+        </p>  Para imprimir en pantalla se puede utilizar tanto print como puts la diferencia recae en que puts agrega al final un salto de linea (/n),  para la entrada de datos se utiliza gets que nos permite el ingreso de datos los cuales se almacena en una variable.</p> </div>
    <br>
         <div class="row">
             <div class="col-sm-12 text-center">
@@ -168,13 +168,13 @@
             <div class="col-sm-6 ">
                 
                 <div class="text-light ">Código</div>
-                <img class="img-fluid " src="img/variables1.png"  alt="Imagen">
+                <img class="img-fluid " src="img/entrada1.png"  alt="Imagen">
             </div>
            
             <div class="col-sm-6">
                 
                 <div class="text-light text-justify">Resultado </div>
-                <img class="img-fluid" src="img/variables2.png" alt="Imagen">
+                <img class="img-fluid" src="img/entrada2.png" alt="Imagen">
             </div>
            
            
@@ -213,9 +213,8 @@
       
         </div>
         <div class="col-sm-6">
-            <div class="text-light ">CADENAS</div>
-            <iframe class="container-fluid" width="560" height="315" src="https://www.youtube.com/embed/1rA489RNCOQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      
+            <div class="text-light ">ENTRADA-SALIDA</div>
+            <iframe class="container-fluid" width="560" height="315" src="https://www.youtube.com/embed/9IzNEMEDyAk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
      
     </div>
