--- a/views/unidades.ejs
+++ b/views/unidades.ejs
@@ -30,7 +30,7 @@
                                     <img class="img-fluid" src="https://blog.desafiolatam.com/wp-content/uploads/2019/01/funciones-ruby.png">
                                 </li>
                                 <li>
-                                    <img class="img-fluid" src="http://www.sg.com.mx/images/stories/sg20/dig_program1.jpg">
+                                    <img class="img-fluid" src="/img/ruby4.png">
                                 </li>
                                 <li>
                                     <img class="img-fluid" src="https://ichi.pro/assets/images/max/724/1*jbP7RfT1CKYURKyN5Nj9Kg.png">
@@ -68,7 +68,7 @@
                         </article>
                         <article class="postcard dark red">
                             <a class="postcard__img_link" href="#">
-                                <img class="img-fluid postcard__img" src="https://www.thoughtco.com/thmb/JpBnEUWE4Szf34r-7z0pKoQUPCs=/768x0/filters:no_upscale():max_bytes(150000):strip_icc()/2000px-Ruby-logo-R.svg-56a811b75f9b58b7d0f05e83.jpg" alt="Image Title" />
+                                <img class="img-fluid postcard__img" src="/img/ruby4.png" alt="Image Title" />
                             </a>
                             <div class="postcard__text text-center">
                                 <h1 class="postcard__title red"><a href="#">Ruby</a></h1>
