--- a/views/partials/navigation3.ejs
+++ b/views/partials/navigation3.ejs
@@ -26,6 +26,18 @@
         </li>
         <li class="menu__item"><a href="/ejemplos" class="menu__link">Ejemplos</a></li>
         <li class="menu__item"><a href="/consola" class="menu__link">Consola</a></li>
+        <li class="menu__item container-submenu">
+            <a href="#" class="menu__link submenu-btn">Cuestionarios<i class="fas fa-chevron-down"></i></a>
+            <ul class="submenu">
+                <li class="menu__item">
+                    <a href="/cuestionario1" class="menu__link">Básico</a>
+                </li>
+                <li class="menu__item">
+                    <a href="/cuestionario2" class="menu__link">Avanzado</a>
+                </li>
+               
+            </ul>
+        </li>
         <li class="menu__item"><a href="/infoempresa" class="menu__link">Acerca de</a></li>
     </ul>
 </nav>
