--- a/views/tema4.ejs
+++ b/views/tema4.ejs
@@ -22,7 +22,7 @@
 </header>
 <article class="container-fluid  postcard dark blue text-center">
     <div class="postcard__text">
-        <h1 class="postcard__title blue"><a href="#">Tema: Estructuras iterativas</a></h1>
+        <h1 class="postcard__title blue"><a href="#">Tema: Estructuras iterativas y repetitivas</a></h1>
        </div>
 </article>
 <article class="container-fluid  postcard dark blue">
