--- a/views/tema4.ejs
+++ b/views/tema4.ejs
@@ -22,23 +22,23 @@
 </header>
 <article class="container-fluid  postcard dark blue text-center">
     <div class="postcard__text">
-        <h1 class="postcard__title blue"><a href="#">Tema: Estructuras iterativas y repetitivas</a></h1>
+        <h1 class="postcard__title blue"><a href="#"> Estructuras iterativas y selectivas</a></h1>
        </div>
 </article>
 <article class="container-fluid  postcard dark blue">
   
     <div class="postcard__text">
-        <h1 class="postcard__title blue text-center"><a href="#">Aritméticos</a></h1>
+        <h1 class="postcard__title blue text-center"><a href="#">Selectivas</a></h1>
         <div class="postcard__subtitle small">
         </div>
         <div class="postcard__bar"></div>
         <div class="postcard__preview-txt text-light"> <strong > <h4>. Concepto</h4> </strong> 
-            <p>Los operadores aritméticos son aquellos que "manipulan" datos numéricos, tanto enteros como reales. Hay 2 tipos de operadores aritméticos: unarios y binarios. Los operadores unarios se anteponen a la expresión aritmética, y son los operadores de signo. Los operadores binarios se sitúan entre 2 expresiones aritméticas.</p> 
+            <p>se utiliza para evaluar una expresión condicional: si se cumple la condición (es verdadera), ejecutará un bloque de código. Si es falsa, es posible ejecutar otras sentencias.</p> 
         <strong > <h4>. Descripción</h4> </strong>
-        <p> Los operadores aritmeticos son + (suma), - (resta), * (multiplicación), / (división), % (modulo)  y ** (potencia), los operadores de ejecutan en un orden especifico, primero la potencia, luego la multiplicación, división y modulo, por último se ejecuta la suma y resta, este orden se puede alterar usando ().</p> </div>
-   <br>
+        <br>
         <div class="row">
-            <div class="col-sm-12 text-center">
+            <div class="col-sm-12 ">
+                <p> Se utiliza con la palabra reservada if, else, elsif y end. Para iniciar la estructura se coloca el if seguido de la condición que se evaluará, si solo pondremos una linea de codigo no es necesario colocar end al final del codigo que comprenderá la estructura, el else se utiliza para colocar el codigo que se ejecura si la condición da como resultado false.</p> </div>
                 <h5><strong>Ejemplo</strong>  </h5>
                 <br>
             </div>
@@ -48,13 +48,13 @@
             <div class="col-sm-6 ">
                 
                 <div class="text-light ">Código</div>
-                <img class="img-fluid " src="img/aritmetico1.png"  alt="Imagen">
+                <img class="img-fluid " src="img/selectivas1.png"  alt="Imagen">
             </div>
            
             <div class="col-sm-6">
                 
                 <div class="text-light text-justify">Resultado </div>
-                <img class="img-fluid" src="img/aritmetico2.png" alt="Imagen">
+                <img class="img-fluid" src="img/selectivas2.png" alt="Imagen">
             </div>
            
            
@@ -69,15 +69,15 @@
 <article class="container-fluid  postcard dark blue">
   
     <div class="postcard__text">
-        <h1 class="postcard__title blue text-center"><a href="#">Comparación</a></h1>
+        <h1 class="postcard__title blue text-center"><a href="#">Iterativas</a></h1>
         <div class="postcard__subtitle small">
         </div>
         <div class="postcard__bar"></div>
         <div class="postcard__preview-txt text-light"> <strong > <h4>. Concepto</h4> </strong> 
-            <p>Los operadores de comparación comparan dos expresiones y Boolean devuelven un valor que representa la relación de sus valores.</p> 
+            <p>es cualquier construcción de programa que repite una sentencia o secuencia de sentencias un número de veces. La sentencia o grupo de sentencias que se repite en un bloque se denomina cuerpo del ciclo y cada repetición del cuerpo del ciclo se llama iteración del ciclo. Un ciclo while tiene una condición del ciclo, una expresión lógica que controla la secuencia de repetición. La posición de esta condición del ciclo es delante del cuerpo del ciclo y significa que un ciclo while es un ciclo de preverificación de modo que cuando se ejecuta el mismo, se evalúa la condición antes de que se ejecute el cuerpo del ciclo.</p> 
             
         <strong > <h4>. Descripción</h4> </strong>
-        <p> Estos operadores nos devuelven verdadero o falso dependiendo el resultado de la comparacion. </p> </div>
+        <p> La estructura basica es while, expresion y end. While va precedido de una expresion la cual se evaluara por cada iteración y si el resultado da verdadero vuelve a ejecutar el codigo que contiene la estructura hasta donde aparece la instrucción end. </p> </div>
    <br>
         <div class="row">
             <div class="col-sm-12 text-center">
@@ -90,53 +90,13 @@
             <div class="col-sm-6 ">
                 
                 <div class="text-light ">Código</div>
-                <img class="img-fluid " src="img/comparacion.png"  alt="Imagen">
+                <img class="img-fluid " src="img/iterativa1.png"  alt="Imagen">
             </div>
            
             <div class="col-sm-6">
                 
                 <div class="text-light text-justify">Resultado </div>
-                <img class="img-fluid" src="img/comparacion2.png" alt="Imagen">
-            </div>
-           
-           
-          
-        </div>
-    
-    </div>
-
-
-</article>
-
-<article class="container-fluid  postcard dark blue">
-  
-    <div class="postcard__text">
-        <h1 class="postcard__title blue text-center"><a href="#">Lógicos</a></h1>
-        <div class="postcard__subtitle small">
-        </div>
-        <div class="postcard__bar"></div>
-        <div class="postcard__preview-txt text-light"> <strong > <h4>. Concepto</h4> </strong> <p>Los operadores lógicos se usan para combinar dos valores Booleanos y devolver un resultado verdadero, falso o nulo. Los operadores lógicos también se denominan operadores Booleanos.</p> 
-        <strong > <h4>. Descripción</h4> </strong>
-        <p>  El operador && (and) nos devuelve verdadero si todos sus parametros son verdaderos, el operador || (or) nos devuelve verdadero si almenos uno de sus parametros es verdadero y el operador ! (not) convierte de verdadero a falso y viceversa. </p> </div>
-   <br>
-        <div class="row">
-            <div class="col-sm-12 text-center">
-                <h5><strong>Ejemplo</strong>  </h5>
-                <br>
-            </div>
-        </div>
-            <div class="row text-center">
-               
-            <div class="col-sm-6 ">
-                
-                <div class="text-light ">Código</div>
-                <img class="img-fluid " src="img/logico1.png"  alt="Imagen">
-            </div>
-           
-            <div class="col-sm-6">
-                
-                <div class="text-light text-justify">Resultado </div>
-                <img class="img-fluid" src="img/logico2.png" alt="Imagen">
+                <img class="img-fluid" src="img/iterativa2.png" alt="Imagen">
             </div>
            
            
@@ -152,6 +112,7 @@
 <article class="container-fluid  postcard dark blue text-center">
     <div class="postcard__text">
         <h1 class="postcard__title blue"><a href="#">Vídeos</a></h1>
+       
     </div>
        
 </article>
@@ -160,23 +121,36 @@
                
         <div class="col-sm-6 ">
             
-            <div class="text-light ">ARITMETICOS</div>
-            <iframe class="container-fluid" width="560" height="315" src="https://www.youtube.com/embed/1REiidJCW58" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="text-light ">SELECTIVAS</div>
+            <iframe class="container-fluid" width="560" height="315" src="https://www.youtube.com/embed/1a9cDRLOvlY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>   
         </div>
        
         <div class="col-sm-6">
-            <div class="text-light ">COMPARACION</div>
-            <iframe class="container-fluid" width="560" height="315" src="https://www.youtube.com/embed/r3_ZdFvcl6Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="text-light ">ITERATIVAS</div>
+            <iframe class="container-fluid" width="560" height="315" src="https://www.youtube.com/embed/VYCCdaVwtmk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>   
         </div>
        
-        <div class="col-sm-6">
-            <div class="text-light ">LOGICOS</div>
-            <iframe class="container-fluid" width="560" height="315" src="https://www.youtube.com/embed/WRZKWSruvUY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </div>
-        
+     
      
     </div>
 </div>
+<br>
+<br>
+<article class="container-fluid  postcard dark blue text-center">
+   
+    <div class="postcard__text">
+        <h5><strong>
+       <a class="text-decoration-none" href="https://www.youtube.com/channel/UCLXRGxAzeaLDGaOphqapzmg">Creador: Codigofacilito</a>
+    </strong>  </h5>
+    </div>
+    <div class="postcard__text">
+        <h5><strong>
+        <a class="text-decoration-none" href="https://www.youtube.com/watch?v=fvrphRoN7P0&list=PL954bYq0HsCUG5_LbfZ54YltPinPSPOks&index=1">Lista completa de reproducción</a>
+    </strong>  </h5>
+    </div>
+       
+       
+</article>
 
 
 
