--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="programación en ruby"/>
+    <meta name="description" content="ruby ues"/>
+    <meta name="description" content="aprender Ruby"/>
+    <meta name="description" content="ruby"/>
     <title>
         MoreRuby
     </title>
