--- a/views/tema1.ejs
+++ b/views/tema1.ejs
@@ -23,7 +23,7 @@
 <div class="mar">
 <article class="container-fluid  postcard dark blue text-center">
     <div class="postcard__text">
-        <h1 class="postcard__title blue"><a href="#">Tema: Creación y ejecución de un proyecto</a></h1>
+        <h1 class="postcard__title blue"><a href="#">Creación y ejecución de un proyecto</a></h1>
        </div>
 </article>
 <article class="container-fluid  postcard dark blue">
@@ -126,7 +126,22 @@
 </div>
 </div>
 
-
+<br>
+<br>
+<article class="container-fluid  postcard dark blue text-center">
+    <div class="postcard__text">
+        <h5><strong>
+       <a class="text-decoration-none" href="https://www.youtube.com/channel/UCLXRGxAzeaLDGaOphqapzmg">Creador: Codigofacilito</a>
+    </strong>  </h5>
+    </div>
+    <div class="postcard__text">
+        <h5><strong>
+        <a class="text-decoration-none" href="https://www.youtube.com/watch?v=fvrphRoN7P0&list=PL954bYq0HsCUG5_LbfZ54YltPinPSPOks&index=1">Lista completa de reproducción</a>
+    </strong>  </h5>
+    </div>
+       
+       
+</article>
 <footer>
     <%- include ('partials/footer')%>
 </footer>
